<resources>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="doctorfindername">Doctor Finder</string>
    <string name="action_log_in">Login </string>
    <string name="send_data_button">Invia i dati </string>
    <string name="restore_psw">Inserisci qui la tua email. Ti contatteremo immediatamente con tutte le istruzioni per recuperare la tua password! </string>
    <string name="intro_claim">Compilando i campi indicati qui in basso potrai consigliarci uno specialista che vorresti fosse su questa applicazione!</string>
    <string name="action_sign2_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Questa email non è valida!</string>
    <string name="error_invalid_password">Password troppo corta!</string>
    <string name="error_incorrect_password">Password sbagliata!</string>
    <string name="error_field_required">Questo campo è obbligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_search">"Ricerca rapida"</string>
    <string name="button_reset">Cancella </string>
    <string name="action_login_with_facebook">"Login con facebook"</string>
    <string name="action_login_with_google">"Login con Google+"</string>
    <string name="text_firstName">Nome</string>
    <string name="text_lastName">Cognome</string>
    <string name="text_emailAdress">Indirizzo Email</string>
    <string name="text_password">Password</string>
    <string name="text_repeatPassword">Ripeti password</string>
    <string name="text_useyourEmail">Altrimenti usa la tua email</string>
    <string name="text_useyourAccount">Altrimenti usa il tuo account</string>
    <string name="text_username">Email</string>
    <string name="text_forgotPassword">Password dimenticata?</string>
    <string name="text_rememberMe">Ricordami</string>
    <string name="text_signupNow">Registrati ora!</string>
    <string name="namy">Non ne fai ancora parte? </string>
    <string name="namelabel">"Nome : "</string>
    <string name="speciallabel">"Specializzazione : "</string>
    <string name="feedbacklabel">"Feedback : "</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="intro_1">Doctor Finder ti permette di trovare il dottore perfetto per te utilizzando i parametri che ritieni più giusti</string>
    <string name="intro_2">Cerca il dottore per nome o  specializzazione</string>
    <string name="intro_3">Usa la mappa per trovare lo specialista più vicino a te</string>
    <string name="intro_4">Infine, visualizza il profilo del dottore e lascia un feedback per aiutare gli altri utenti come te!</string>
    <string name="profile">Il tuo Profilo</string>
    <string name="inserisci_dottore">Registrati come specialista</string>
    <string name="logout">Logout</string>
    <string name="docfinder">Doctor Finder</string>
    <string name="support">Supporto</string>
    <string name="like"> Facebook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string-array name="Specializations">

        <item>Allergologia</item>
        <item>Anatomia Patologica</item>
        <item>Andrologia</item>
        <item>Angiologia Medica</item>
        <item>Cardiochirurgia</item>
        <item>Cardiologia</item>
        <item>Cardiologia Pediatrica</item>
        <item>Chirurgia Generale</item>
        <item>Chirurgia Maxillo-Facciale</item>
        <item>Chirurgia Pediatrica</item>
        <item>Chirurgia Plastica</item>
        <item>Chirurgia Proctologica</item>
        <item>Chirurgia Toracica</item>
        <item>Chirurgia Vascolare</item>
        <item>Dermatologia</item>
        <item>Diabetologia</item>
        <item>Dietologia</item>
        <item>Ecografia e Doppler</item>
        <item>Ematologia</item>
        <item>Endocrinologia</item>
        <item>Fisiatria</item>
        <item>Fisioterapia</item>
        <item>Gastroenterologia</item>
        <item>Genetica Medica</item>
        <item>Geriatria e Gereontologia</item>
        <item>Ginecologia e Ostetricia</item>
        <item>Immunologia</item>
        <item>Infettivologia e Malattie Infettive</item>
        <item>Medico di Base</item>
        <item>Medicina del Dolore</item>
        <item>Medicina dello Sport</item>
        <item>Medicina Estetica</item>
        <item>Medicina Interna</item>
        <item>Medicina del Lavoro</item>
        <item>Medicina Legale</item>
        <item>Medicina Nucleare</item>
        <item>Medicina Veterinaria</item>
        <item>Nefrologia</item>
        <item>Neurochirurgia</item>
        <item>Neurofisiopatologia</item>
        <item>Neurologia</item>
        <item>Neuropsichiatria Infantile</item>
        <item>Oculistica</item>
        <item>Odontoiatria</item>
        <item>Omeopatia</item>
        <item>Oncologia</item>
        <item>Ortopedia e Traumatologia</item>
        <item>Otorinolaringoiatria</item>
        <item>Pediatria</item>
        <item>Pneumologia e Malattie Respiratorie</item>
        <item>Proctologia</item>
        <item>Psichiatria</item>
        <item>Psicologia</item>
        <item>Radiologia Interventistica</item>
        <item>Radiologia TAC e Risonanza</item>
        <item>Reumatologia</item>
        <item>Senologia</item>
        <item>Urologia</item>
        <item>Venereologia</item>

    </string-array>
    <string-array name="cities">

        <item>Agrigento</item>
        <item>Alessandria</item>
        <item>Ancona</item>
        <item>Aosta</item>
        <item>Arezzo</item>
        <item>Ascoli Piceno</item>
        <item>Asti</item>
        <item>Avellino</item>
        <item>Bari</item>
        <item>Barletta-Andria-Trani</item>
        <item>Belluno</item>
        <item>Benevento</item>
        <item>Bergamo</item>
        <item>Biella</item>
        <item>Bologna</item>
        <item>Bolzano</item>
        <item>Brescia</item>
        <item>Brindisi</item>
        <item>Cagliari</item>
        <item>Caltanissetta</item>
        <item>Campobasso</item>
        <item>Carbonia-Iglesias</item>
        <item>Caserta</item>
        <item>Catania</item>
        <item>Catanzaro</item>
        <item>Chieti</item>
        <item>Como</item>
        <item>Cosenza</item>
        <item>Cremona</item>
        <item>Crotone</item>
        <item>Cuneo</item>
        <item>Enna</item>
        <item>Ferrara</item>
        <item>Firenze</item>
        <item>Foggia</item>
        <item>Forlì-Cesena</item>
        <item>Frosinone</item>
        <item>Genova</item>
        <item>Gorizia</item>
        <item>Grosseto</item>
        <item>Imperia</item>
        <item>Isernia</item>
        <item>La spezia</item>
        <item>L Aquila</item>
        <item>Latina</item>
        <item>Lecce</item>
        <item>Lecco</item>
        <item>Livorno</item>
        <item>Lodi</item>
        <item>Lucca</item>
        <item>Macerata</item>
        <item>Mantova</item>
        <item>Massa-Carrara</item>
        <item>Matera</item>
        <item>Medio Campidano</item>
        <item>Messina</item>
        <item>Milano</item>
        <item>Modena</item>
        <item>Napoli</item>
        <item>Novara</item>
        <item>Nuoro</item>
        <item>Olbia-Tempio</item>
        <item>Oristano</item>
        <item>Padova</item>
        <item>Palermo</item>
        <item>Parma</item>
        <item>Pavia</item>
        <item>Perugia</item>
        <item>Pesaro e Urbino</item>
        <item>Pescara</item>
        <item>Piacenza</item>
        <item>Pisa</item>
        <item>Pistoia</item>
        <item>Pordenone</item>
        <item>Potenza</item>
        <item>Prato</item>
        <item>Ragusa</item>
        <item>Ravenna</item>
        <item>Reggio Calabria</item>
        <item>Reggio Emilia</item>
        <item>Rieti</item>
        <item>Rimini</item>
        <item>Roma</item>
        <item>Rovigo</item>
        <item>Salerno</item>
        <item>Sassari</item>
        <item>Savona</item>
        <item>Siena</item>
        <item>Siracusa</item>
        <item>Sondrio</item>
        <item>Taranto</item>
        <item>Teramo</item>
        <item>Terni</item>
        <item>Torino</item>
        <item>Trapani</item>
        <item>Trento</item>
        <item>Treviso</item>
        <item>Trieste</item>
        <item>Udine</item>
        <item>Varese</item>
        <item>Venezia</item>
        <item>Verbano-Cusio-Ossola</item>
        <item>Vercelli</item>
        <item>Verona</item>
        <item>Vibo Valentia</item>
        <item>Vicenza</item>
        <item>Viterbo</item>

    </string-array>
    <string name="facebook_app_id">235657870105831</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit">Esci</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_doctors_profile"></string>
    <string name="title_activity_buttare">ButtareActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_doctor">DoctorActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_doctor_maps_fragment">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="skip">Benvenuto su Doctor Finder!</string>
    <string name="title_activity_custom_intro">CustomIntro</string>
    <string name="title_activity_default_intro">Default Intro</string>
    <string name="doctor_map">Visualizza Profilo</string>
    <string name="Informativa1">
    "Ai sensi dell'art. 13 del D. Lgs. 196/2003. Il presente documento, "Informativa Privacy", descrive le modalità del trattamento dei dati raccolti tramite Doctor Finder. La presente Informativa Privacy è resa solo ed esclusivamente per l'applicazione "Doctor Finder" e non anche per eventuali siti web attraverso i quali ad esempio se un Utente dovesse accedere a / o utilizzare l'applicazione.Installando questa applicazione, l’Utente acconsente alla raccolta e al trattamento dei dati di seguito indicati. Raccolta dei dati personali e trasmissione dei dati. I servizi forniti dall'App, nonché le caratteristiche e le funzioni della stessa non richiedono alcuna forma di registrazione, inserendo dati personali degli Utenti. Informiamo l'Utente che l'App prevede la possibilità di utilizzo dei servizi di localizzazione presenti sul dispositivo dell’Utente, e associabili all'App. Tali servizi verranno attivati soltanto a seguito di un autorizzazione fornita dall'Utente, attraverso la scelta dell’opzione "Ok" al momento della richiesta di attivazione. Se invece l’Utente sceglie l’opzione "Nega", l'App non avrà accesso ai predetti servizi di geolocalizzazione. Detti servizi si possono attivare/disattivare in qualsiasi momento attraverso le impostazioni fornite dal dispositivo dell'Utente. I dati sono trattati con strumenti automatizzati e non, per il solo tempo strettamente necessario a conseguire le finalità per cui sono stati raccolti. In qualsiasi momento l'Utente potrà disinstallare dal proprio dispositivo l'App scaricata, revocando così il consenso al trattamento dei dati. Si consiglia pertanto di leggere attentamente le relative politiche sulla privacy ed i termini d'uso, prima di fornire i propri dati personali. La presente informativa è stata aggiornata il 09/03/2016."
    </string>
    <string name="feedback_dialog_name">Il tuo feedback</string>
    <string name="feedback_send">Invia</string>
    <string name="cancel">Annulla</string>
</resources>