<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <item
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile"
            android:id="@+id/profile"/>
        <item
            android:icon="@drawable/ic_person_add_white_24dp"
            android:title="@string/inserisci_dottore"
            android:id="@+id/inserisci_dottore" />
        <item
            android:icon="@drawable/ic_info_white_24dp"
            android:title="Informativa sull'utilizzo"
            android:id="@+id/informativa" />

        <item
            android:icon="@drawable/ic_help_white_24dp"
            android:title="@string/support"
            android:id="@+id/support"/>



    </group>



    <group android:checkableBehavior="single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

            <item
                android:id="@+id/like"
                android:title="@string/like"
                android:icon="@drawable/facebook_doctor_finder_icon" />

        <item android:title="@string/logout"
            android:textColor="@color/black"
            android:id="@+id/logout"
            android:icon="@drawable/ic_exit_to_app_white_24dp"/>


    </group>

</menu>