<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/docfinder"
        android:id="@+id/frame_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/feedback_dialog_name"
            android:id="@+id/title_feedback"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:layout_margin="16dp" />
    </FrameLayout>
<include layout="@layout/scrollview_fragment_dialog"></include>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/cancel"
            android:id="@+id/annulla"
            android:textAllCaps="true"
            android:gravity="left"
            android:layout_margin="20dp"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/feedback_send"
            android:id="@+id/invia"
            android:layout_alignParentTop="true"
            android:textAllCaps="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="20dp" />

    </RelativeLayout>


</RelativeLayout>