<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/docfinder"
    >

    <ImageButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:background="@drawable/logodc"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-10dp"
        android:text="@string/action_search"
        android:layout_alignBottom="@id/search_button"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        tools:ignore="ContentDescription"
        android:cropToPadding="true"
        android:adjustViewBounds="false"

        android:layout_gravity="center"
        android:layout_alignParentTop="false"
        android:src="@drawable/dcf_screen"
        android:layout_margin="30dp" />


    <LinearLayout
        android:id="@+id/log_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/action_log_in"
            android:id="@+id/login_button"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            android:textAllCaps="false"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/action_sign2_up"
            android:id="@+id/signin_button"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />
    </LinearLayout>



</RelativeLayout>